# Guild-Scroll

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  DOCKER.md  DOCKER_FIXES_APPLIED.md  README.md  SECURITY.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml
.claude/: settings.json  settings.local.json
.github/: copilot-instructions.md
.playwright-mcp/: page-2026-04-02T11-35-48-660Z.yml  page-2026-04-02T11-38-55-564Z.yml  test.html
docker/: .dockerignore  .env.example  Dockerfile.guild-scroll  Dockerfile.kali  Dockerfile.kali.official  README.md  TROUBLESHOOTING.md  entrypoint-app.sh  entrypoint-kali.sh
docs/: diagrams.md  playwright.md  visuals-maintenance.md
e2e/: delete-session.spec.js  fixtures.js  live-session.spec.js
k8s/: configmap.yaml  guild-scroll-app-deployment.yaml  kali-recorder-statefulset.yaml  kustomization.yaml  namespace.yaml  persistent-volume-claim.yaml  rbac.yaml  services.yaml
scripts/: check_markdown_links.py  create_issues.sh  create_m5_issues.ps1  docker-start.ps1  docker-start.sh  validate_copilot_customizations.py
tests/: conftest.py  test_analysis.py  test_asset_detector.py  test_cli.py  test_copilot_scaffolding.py  test_crypto.py  test_export_cast.py  test_export_html.py  test_export_markdown.py  test_export_obsidian.py  test_hooks.py  test_hooks_bash.py  test_integrity.py  test_log_schema.py  test_log_schema_m4.py  test_log_writer.py  test_merge.py  test_output_extractor.py  test_platform_detect.py  test_replay.py  test_screenshot.py  test_search.py  test_server.py  test_session.py  test_tui.py  (+9 more)
(+80 files in other folders)
