[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "guild-scroll"
version = "0.12.1"
description = "CTF/pentesting session manager — records, annotates, and exports terminal sessions"
requires-python = ">=3.11"
dependencies = [
    "click>=8.0",
]

[project.optional-dependencies]
tui = ["textual>=0.47"]

[project.scripts]
gscroll = "guild_scroll.cli:cli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
